// Copyright (c) YugaByte, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
// in compliance with the License.  You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License
// is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
// or implied.  See the License for the specific language governing permissions and limitations
// under the License.

syntax = "proto2";

package yb;

option java_package = "org.yb";

message HostPortPB {
  required string host = 1;
  required uint32 port = 2;
}

message CloudInfoPB {
  optional string placement_cloud = 1;
  optional string placement_region = 2;
  optional string placement_zone = 3;
}

message CloudInfoListPB {
  repeated CloudInfoPB zones = 1;
}
